2003-03-29  Bernhard Held <bernhard@bernhardheld.de>

	* support/Util/dbuf.h: remove C++ stuff to make it portable

2003-03-28  Borut Razem <borut.razem@siol.net>

	* src/SDCC.lex: Fix for bug #711240: dynamic buffer handling of C
          literal strings in stringLiteral()
	* support/Util/dbuf.c, support/Util/dbuf.h: added: dynamic buffer handling
	* src/Makefile.bcc, src/Makefile.in, src\src.dsp: added support/Util/dbuf.c
          to the project

2003-03-27  Paul Stoffregen <paul@pjrc.com>

	* src/SDCCpeeph.c (pcDistance): accurate byte distance for mcs51

2003-03-26    <johan@balder>

	* src/mcs51/gen.c (saveRegisters): catched symbol abuse
	* src/ds390/gen.c (saveRegisters): catched symbol abuse
	* src/SDCCast.c (decorateType): fixed " -v < 3"

2003-03-23  Bernhard Held <bernhard@bernhardheld.de>

	* doc/cdbfile.html: removed, replaced by cdbfileformat.lyx
	Added Lenny Story's debug infrastructure changes:
	* src/Makefile.in:  added new files cdbFile.c and SDCCdebug.c
	* src/Makefile.bcc: added new files cdbFile.c and SDCCdebug.c
	* src/cdbFile.c: added
	* src/SDCCdebug.c: added
	* src/SDCCdebug.h: added
	* src/SDCCast.c (createFunction)
	* src/SDCCglue.c (emitRegularMap, emitStaticSeg, emitOverlay, glue)
	* src/SDCCmain.c (parseCmdLine, main)
	* src/SDCCmem.c (redoStackOffsets)
	* src/SDCCsymt.c (cdbStructBlock, cdbTypeInfo, cdbSymbol, cdbStruct, cdbStructBlock)
	* src/SDCCsymt.h
	* src/common.h
	* src/avr/gen.c (genAVRCode)
	* src/ds390/gen.c (gen390Code)
	* src/mcs51/gen.c (gen51Code) 
	* src/pic/gen.c (genpic14Code)
	* src/pic/glue.c (pic14emitRegularMap, pic14emitStaticSeg, pic14emitOverlay, picglue)
	* src/xa51/gen.c (genXA51Code)
	* src/SDCCast.c: fixed "void foo(void){char c; -c < 0;}"

2003-03-22  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/gen.c (genCodePointerGet): quicker code for bug #700797
	* src/mcs51/peeph.def: added rules 177, 241.x to 243, touched 181, 182.x, 193.x

2003-03-22    <johan@balder>
